[package]
name = "activation_functions"
version = "0.1.1"
authors = ["SnefDen (@SnefDenGames)"]
edition = "2018"
description = "This is a collection of activation functions"
repository = "https://github.com/SnefDenGames/activation_functions"
license = "MIT OR Apache-2.0"
keywords = ["ai","collection","functions","activation","function"]

[dependencies]
